8246019: PerfClassTraceTime slows down VM start-up

Reviewed-by: dholmes, redestad, minqi, ccheung